The XML install manifest is now being generated! It's only printing to the screen, but it's there. Next will be work on generating the downloadable file.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -492,7 +492,7 @@
 						<input type="hidden" name="anvil_striker2_name"      id="anvil_striker2_name"      value="#!replace!anvil_striker2_name!#" />
 						<input type="hidden" name="anvil_striker2_bcn_ip"    id="anvil_striker2_bcn_ip"    value="#!replace!anvil_striker2_bcn_ip!#" />
 						<input type="hidden" name="anvil_striker2_ifn_ip"    id="anvil_striker2_ifn_ip"    value="#!replace!anvil_striker2_ifn_ip!#" />
-						<input type="hidden" name="anvil_sequence"           id="anvil_sequence"           value="#!replace!anvil_sequence" />
+						<input type="hidden" name="anvil_sequence"           id="anvil_sequence"           value="#!replace!anvil_sequence!#" />
 						<input type="submit" name="do" id="do" value="#!string!button_0047!#" class="bold_button" />
 						<input type="hidden" name="config" id="config" value="true" />
 						<input type="hidden" name="generate" id="generate" value="true" />
