Started working on the Install Manifest file component. Now when a manifest is generated, it is saved into a web-accessible directory and becomes available for future loading and downloading, as well as ability to delete. These functions do not work yet, though the menu displaying them is. Also updated the installed to create the new manifests directory and added a conf.d file to tell browsers to download the .xml files instead of trying to load them in the browser window itself.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -532,6 +532,70 @@
 <br />
 <!-- end form-error -->
 
+<!-- start manifest-created -->
+<table>
+	<tr>
+		<td colspan="2" class="highlight_ready_bold">
+			#!string!title_0164!#
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0083!#
+		</td>
+		<td>
+			<br />
+			#!replace!message!#<br />
+			<br />
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end manifest-created -->
+
+<!-- start install-manifest-header -->
+<table>
+	<tr>
+		<td colspan="8" class="highlight_ready_bold">
+			#!string!title_0165!#
+		</td>
+	</tr>
+<!-- end install-manifest-header -->
+
+<!-- start install-manifest-entry -->
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0203!#
+		</td>
+		<td>
+			#!replace!description!#
+		</td>
+		<td>
+			&nbsp;
+		</td>
+		<td>
+			<a href="#!replace!load!#">#!string!button_0048!#</a>
+		</td>
+		<td>
+			&nbsp;
+		</td>
+		<td>
+			<a href="#!replace!download!#">#!string!button_0041!#</a>
+		</td>
+		<td>
+			&nbsp;
+		</td>
+		<td class="highlight_dangerous_bold">
+			<a href="#!replace!delete!#">#!string!button_0030!#</a>
+		</td>
+	</tr>
+<!-- end install-manifest-entry -->
+	
+<!-- start install-manifest-footer -->
+</table>
+<br />
+<!-- end install-manifest-footer -->
+
 <!-- start install-manifest-form -->
 <table>
 	<form action="#!replace!form_file!#" method="post" name="config">
