Deleting and downloading existing install manifests completed. Began parsing (loading) install manifests.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -553,6 +553,114 @@
 <br />
 <!-- end manifest-created -->
 
+<!-- start delete-manifest-success -->
+<table>
+	<tr>
+		<td colspan="2" class="highlight_ready_bold">
+			#!string!title_0164!#
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0083!#
+		</td>
+		<td>
+			<br />
+			#!replace!message!#<br />
+			<br />
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end delete-manifest-success -->
+
+<!-- start delete-manifest-failure -->
+<table>
+	<tr>
+		<td colspan="2" class="highlight_ready_bold">
+			#!string!title_0167!#
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_warning_bold">
+			#!string!row_0133!#
+		</td>
+		<td>
+			<br />
+			#!replace!message!#<br />
+			<br />
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end delete-manifest-failure -->
+
+<!-- start load-manifest-failure -->
+<table>
+	<tr>
+		<td colspan="2" class="highlight_ready_bold">
+			#!string!title_0168!#
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_warning_bold">
+			#!string!row_0133!#
+		</td>
+		<td>
+			<br />
+			#!replace!message!#<br />
+			<br />
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end load-manifest-failure -->
+
+<!-- start manifest-confirm-delete -->
+<table>
+	<tr>
+		<td colspan="2" class="highlight_ready_bold">
+			#!string!title_0166!#
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!button_0004!#
+		</td>
+		<td>
+			<br />
+			#!replace!message!#<br />
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_warning_bold">
+			#!string!row_0044!#
+		</td>
+		<td>
+			<br />
+			#!string!message_0172!#<br />
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+			<table class="hidden_table" width="100%">
+				<tr>
+					<td width="50%" class="td_hidden_white">
+						&nbsp;
+					</td>
+					<td width="50%" class="td_hidden_white">
+						<a href="#!replace!confirm!#" class="bold_button">#!string!button_0004!#</a>
+					</td>
+				</tr>
+			</table>
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end manifest-confirm-delete -->
+
 <!-- start install-manifest-header -->
 <table>
 	<tr>
@@ -583,10 +691,10 @@
 			<a href="#!replace!download!#">#!string!button_0041!#</a>
 		</td>
 		<td>
-			&nbsp;
+			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 		</td>
-		<td class="highlight_dangerous_bold">
-			<a href="#!replace!delete!#">#!string!button_0030!#</a>
+		<td>
+			<a href="#!replace!delete!#" class="highlight_dangerous_bold">#!string!button_0030!#</a>
 		</td>
 	</tr>
 <!-- end install-manifest-entry -->
